--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,11 @@
         <item name="android:scaleType">centerCrop</item>
     </style>
 
+    <style name="text_style">
+        <item name="android:textColor">@color/txt_color</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 </resources>
