--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/background_style"
-    tools:context=".SignInActivity">
+    tools:context=".StartScreeActivity">
 
 
     <TextView
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/txt_username_signin"
+        android:id="@+id/txt_email_signin"
         style="@style/text_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_signin" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_signin" />
 
     <TextView
         android:id="@+id/txt_pass_signin"
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_signin" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_signin" />
 
     <EditText
         android:id="@+id/edt_pass"
@@ -79,7 +79,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_signin" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_signin" />
 
     <Button
         android:id="@+id/btn_signin"
