--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/background_style"
-    tools:context=".GameActivity">
+    tools:context=".activities.GameActivity">
 
     <android.support.v7.widget.GridLayout
         android:layout_width="368dp"
