--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -103,6 +103,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_pass_signup" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_pass_signup"
+        app:layout_constraintVertical_bias="0.115" />
 
 </android.support.constraint.ConstraintLayout>
