--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="mode_button_style">
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
 </resources>
