--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,22 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<info.overrideandroid.connect4.view.BoardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/background_style"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/gameView"
     tools:context=".activities.GameActivity">
 
-    <android.support.v7.widget.GridLayout
-        android:layout_width="368dp"
-        android:layout_height="368dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:columnCount="4"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:rowCount="5">
+</info.overrideandroid.connect4.view.BoardView>
 
-
-    </android.support.v7.widget.GridLayout>
-</android.support.constraint.ConstraintLayout>
