--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="txt_color">#062a66</color>
+    <color name="red">#f22a2d</color>
+    <color name="yellow">#ffce48</color>
 </resources>
